# GovGrant-AI

./: .env.example  .gitignore  About.md  Infra.md  README.md  pyproject.toml  wiki.json
.github/workflows/: eval.yml
data/auth/: tenants.example.json
data/eval/: 01_fact_lookup.json  02_boolean.json  03_list.json  04_comparison.json  05_scenario.json  06_multi_hop.json  07_not_found.json  08_edge_case.json  09_sba_policy.json  10_sf424_guide.json  SCHEMA.json  THRESHOLDS.json  regression_min.json
data/fixtures/pdfs/: README.md
data/fixtures/sbir/: open_solicitations.sample.json
docs/: r1-quickstart.md  rag-pipeline-plan.md
scripts/: check_stack.sh  run_gates.sh  run_golden_eval.sh
src/govgrant/: __init__.py
src/govgrant/agent/: __init__.py  graph.py  llm.py  tools.py
src/govgrant/agent/tools/: __init__.py  judge.py  prompts.py  routing.py  self_check.py
src/govgrant/agent/tools/prompts/: __init__.py  answer.py  judge.py  routing.py  self_check.py
src/govgrant/auth/: __init__.py  context.py  registry.py
src/govgrant/compliance/: __init__.py  checklist.py  draft_llm.py  proposal.py  report.py
src/govgrant/core/: telemetry.py
src/govgrant/evals/: langsmith_eval.py
src/govgrant/proposals/: __init__.py  service.py  store.py
src/govgrant/rag/: __init__.py  cli.py  config.py  contracts.py
src/govgrant/rag/eval/: __init__.py  gates.py  runner.py
src/govgrant/rag/index/: __init__.py  embeddings.py  hybrid.py  qdrant_store.py  rerank.py  sparse.py
src/govgrant/rag/parsers/: __init__.py  base.py  figures.py  prose.py  tables.py
src/govgrant/rag/router/: __init__.py  query_router.py
src/govgrant/rag/sbir/: __init__.py  client.py  disclaimer.py  models.py  normalizer.py  service.py  store.py
src/govgrant/rag/tabular/: __init__.py  sql_store.py
src/govgrant/ui/: __init__.py  __main__.py  app.py
tests/: conftest.py
tests/rag/: test_agent.py  test_auth.py  test_compliance_and_precision.py  test_contracts.py  test_draft_llm.py  test_figures.py  test_gates.py  test_multiquery.py  test_proposals.py  test_report_export.py  test_router.py  test_sbir.py  test_tables.py  test_tokenizer.py
