[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "govgrant-ai"
version = "0.1.0"
description = "GovGrant AI — multimodal hybrid RAG for federal grant compliance (SBIR/STTR)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "llama-index-core>=0.12.0",
  "llama-index-embeddings-ollama>=0.5.0",
  "llama-index-vector-stores-qdrant>=0.4.0",
  "llama-parse>=0.5.0",
  "qdrant-client>=1.12.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0",
  "pypdf>=5.0",
  "httpx>=0.27.0",
  "pymupdf>=1.24.0",
  "Pillow>=10.0.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "anthropic>=0.40.0",
  "gradio>=4.0",
  "langsmith>=0.3.0",
  # OpenTelemetry (observability via Grafana / OTLP-compatible backends)
  "opentelemetry-sdk>=1.30.0",
  "opentelemetry-exporter-otlp-proto-http>=1.30.0",
  "opentelemetry-instrumentation-httpx>=0.51b0",
  "opentelemetry-instrumentation-logging>=0.51b0",
  "opentelemetry-instrumentation-system-metrics>=0.51b0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9.0", "mypy>=1.15.0"]

[project.scripts]
govgrant-ingest = "govgrant.rag.cli:ingest_main"
govgrant-query = "govgrant.rag.cli:query_main"
govgrant-ui = "govgrant.ui.app:main"
govgrant-agent = "govgrant.rag.cli:agent_main"
govgrant-eval-ls = "govgrant.evals.langsmith_eval:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade (py311+)
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except (matches existing noqa)
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
]
ignore = [
  "E501",      # line-length (handled by formatter)
  "SIM108",    # ternary style preference
  "RUF012",    # mutable-class-defaults (dataclass field pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
